<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/header"
        style="@style/SectionHeaderTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/profile_creation_header"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/description"
        style="@style/PrimaryTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        tools:text="@string/profile_creation_instruction"
        app:layout_constraintBottom_toTopOf="@+id/profile_avatar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <FrameLayout
        android:id="@+id/profile_avatar_layout"
        android:layout_width="@dimen/profile_image_width"
        android:layout_height="@dimen/profile_image_height"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description">

        <ImageButton
            android:id="@+id/profile_image_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/AvatarButtonStyle" />

        <TextView
            android:id="@+id/add_avatar_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/SecondaryTextStyle"
            android:gravity="center"
            android:maxLines="5"
            android:padding="@dimen/margin_small"
            android:text="@string/tap_to_add_avatar"/>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>